# norma-core-dev

./: .gitignore  Cargo.toml  Makefile  go.mod  go.sum  go.work  go.work.sum
docs/: upstream-to-menagerie.md
docs/superpowers/notes/: lessons-from-mvp3-chunk0.md
docs/superpowers/plans/: 2026-04-10-simulation-integration-mvp1.md  2026-04-11-mvp2-menagerie-walking-skeleton.md  2026-04-12-mvp3-chunk0-first-class-mjcf.md  2026-04-12-mvp3-chunk1-assets-urdf-move.md  2026-04-12-mvp3-chunk2-scene-wrapper.md  2026-04-12-mvp3-chunk3-test-decoupling.md  2026-04-12-mvp4-a4-upstream-prep.md
docs/superpowers/specs/: 2026-04-10-simulation-integration-design.md  2026-04-10-simulation-integration-v1-driver-shim-archive.md  2026-04-11-mvp2-menagerie-comparison-table.md  2026-04-11-mvp2-menagerie-walking-skeleton-design.md  2026-04-12-control-layer-architecture-decision.md  2026-04-12-mvp3-first-class-mjcf-design.md  2026-04-12-mvp3-foundation-roadmap-design.md  2026-04-12-mvp4-a4-upstream-prep-design.md  2026-04-12-phase2-roadmap.md
experiments/: README.md
experiments/bimo/: .gitignore  README.md  agent.md
experiments/bimo/docs/: insights.md
experiments/mjviser/: .gitignore  README.md  agent.md
experiments/robot-control-stack/: .gitignore  README.md  agent.md
hardware/elrobot/: README.md
hardware/elrobot/simulation/: elrobot_follower.scene.yaml  elrobot_follower.xml  menagerie_so_arm100.scene.yaml
hardware/pgripper/STEP/: Gripper.stp
protobufs/drivers/inferences/: normvla.proto
protobufs/drivers/motors-mirroring/: mirroring.proto
protobufs/drivers/st3215/: st3215.proto
protobufs/drivers/sysinfo/: sysinfo.proto
protobufs/drivers/usbvideo/: frame.proto  usbvideo.proto
protobufs/sim/: world.proto
protobufs/station/: commands.proto  dataset.proto  drivers.proto  envelope.proto  inference.proto  opts.proto
shared/console-tool/: console-tool.go
shared/ulimits/: ulimits.go  ulimits_unsupported.go
software/drivers/motors-mirroring/: Cargo.toml  build.rs
software/drivers/motors-mirroring/src/: config.rs  lib.rs  types.rs
software/drivers/motors-mirroring/src/inference/: mirror.rs  mod.rs  model.rs  normalize.rs
software/drivers/st3215/: Cargo.toml  build.rs  memory.go
software/drivers/st3215-wire/: Cargo.toml
software/drivers/st3215-wire/src/: layout.rs  lib.rs  pack.rs  presets.rs  register.rs  units.rs  unpack.rs
software/drivers/st3215/src/: calibrate.rs  calibrate_test.rs  driver.rs  errors.rs  lib.rs  port.rs  port_meta.rs  presets.rs  state.rs
software/drivers/st3215/src/auto_calibrate/: calibrator.rs  elrobot.rs  mod.rs  so101.rs
software/drivers/st3215/src/protocol/: devices.rs  error.rs  memory.rs  mod.rs  packet.rs  packet_test.rs  units.rs  units_test.rs
software/drivers/sysinfod/: Cargo.toml  build.rs
software/drivers/sysinfod/src/: lib.rs
software/drivers/usbvideo/: Cargo.toml  build.rs
software/drivers/usbvideo/src/: lib.rs  pipeline.rs  state.rs
software/drivers/usbvideo/src/converters/: fourcc.rs  mjpeg.rs  mod.rs  resize.rs  rgb.rs  yuv2.rs  yuv420.rs  yuv420v.rs  yuv_tables.rs
software/drivers/usbvideo/src/linux/: ffi.rs  mod.rs
software/drivers/usbvideo/src/osx/: ffi.rs  mod.rs
software/drivers/usbvideo/src/osx/avflib/: Makefile  test_library.m  test_notifications.m
software/drivers/usbvideo/src/osx/avflib/avflib/: avf.h  avf.m
software/sim-bridges/st3215-compat-bridge/: Cargo.toml
software/sim-bridges/st3215-compat-bridge/presets/: elrobot-follower.yaml  menagerie-so-arm100.yaml  therobotstudio-so101.yaml
software/sim-bridges/st3215-compat-bridge/src/: actuator_map.rs  command_task.rs  errors.rs  health_task.rs  lib.rs  preset_loader.rs  state_task.rs
software/sim-runtime/: Cargo.toml  build.rs
software/sim-runtime/src/: actuation_sender.rs  clock.rs  errors.rs  health.rs  lib.rs  registry.rs  runtime.rs  snapshot_broker.rs  supervisor.rs
software/sim-runtime/src/backend/: child_process.rs  external_socket.rs  mock.rs  mod.rs  runtime_dir.rs  transport.rs
software/sim-runtime/src/ipc/: codec.rs  framing.rs  handshake.rs  mod.rs
software/sim-runtime/src/proto/: mod.rs
software/sim-server/: README.md  WEEK1_PLAN.md  pyproject.toml  test_gym_env_manual.py  test_policy_eval.py  test_policy_station.py
software/sim-server/experiments/: pick_v1.yaml  pick_v1_quick.yaml  pick_v1_robust.yaml
software/sim-server/norma_sim/: __init__.py  __main__.py  cameras.py  cli.py  data_quality.py  episode.py  episode_recorder.py  experiment.py  fast_sim.py  fast_sim_mjx.py  gym_env.py  lerobot_helpers.py  lerobot_robot.py  logging_setup.py  robot_env.py  sim_factory.py  sim_to_real.py  viz_grid.py
software/sim-server/norma_sim/ipc/: codec.py  framing.py  server.py  session.py
software/sim-server/norma_sim/scheduler/: base.py  realtime.py  stepping.py
software/sim-server/norma_sim/tasks/: __init__.py  base.py  pick_and_place.py  registry.py
software/sim-server/norma_sim/world/: _proto.py  actuation.py  capabilities.py  descriptor.py  manifest.py  model.py  snapshot.py
software/sim-server/scripts/: batch_generate.py  build_dataset_from_npz.py  eval_policy.py  inspect_sim.py  probe_manifest.py  record_scripted_demo.py  run_experiment.py  send_actuation.py  validate_dataset.py
software/sim-server/tests/: conftest.py  test_episode.py  test_episode_recorder.py  test_fast_sim.py  test_lerobot_robot.py  test_logging_setup.py  test_scheduler_realtime.py  test_scheduler_stepping.py
software/sim-server/tests/integration/: test_elrobot_acceptance.py  test_elrobot_manifest_sentinel.py  test_full_loop.py  test_menagerie_walking_skeleton.py
software/sim-server/tests/ipc/: test_codec.py  test_framing.py  test_server.py  test_session.py
software/sim-server/tests/world/: test_actuation.py  test_capabilities.py  test_descriptor_build.py  test_manifest_enumerate.py  test_manifest_load.py  test_manifest_new_schema.py  test_mimic_gripper.py  test_model.py  test_snapshot.py
software/station/shared/station-iface/: Cargo.toml  build.rs
software/station/shared/station-iface/src/: config.rs  lib.rs  traits.rs
(+128 files in other folders)
