[project]
name = "norma-sim"
version = "0.1.0"
description = "NormaCore Python simulation server (MuJoCo-backed)"
requires-python = ">=3.11"
dependencies = [
    "mujoco>=3.2,<4",
    "numpy>=1.26",
    "protobuf>=4",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["norma_sim*"]
