[package]
name = "st3215"
version.workspace = true
edition = "2021"
authors = ["Alex Batsuev <ab@elrobot.eu>"]
description = "ST3215 servo motor control library and CLI tool"
repository = "https://github.com/norma_core/norma_core/"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["servo", "motor", "robotics", "st3215", "serial"]
categories = ["hardware-support", "command-line-utilities"]

[features]
default = []

[dependencies]
tokio = { workspace = true }
normfs = { workspace = true }
systime = { path = "../../station/shared/systime-rs" }
station_iface = { path = "../../station/shared/station-iface" }
st3215-wire = { path = "../st3215-wire" }
prost = { workspace = true }
bytes = { workspace = true }
parking_lot = { workspace = true }
log = { workspace = true }
tokio-serial = "5.4.5"

[lib]
path = "src/lib.rs"

[build-dependencies]
prost-build = { workspace = true }