[package]
name = "usbvideo"
version.workspace = true
edition = "2024"

[dependencies]
tokio = { workspace = true }
normfs = { workspace = true }
systime = { path = "../../station/shared/systime-rs" }
station_iface = { path = "../../station/shared/station-iface" }
prost = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
libc = "0.2"
md5 = "0.5.0"
zune-jpeg = "0.5.5"
turbojpeg = { version = "1.3" }

[target.'cfg(target_os = "linux")'.dependencies]
norm-uvc-sys = "0.3.0-nc"

[build-dependencies]
prost-build = { workspace = true }

[lib]
path = "src/lib.rs"