[package]
name = "station_iface"
version.workspace = true
edition = "2024"

[dependencies]
prost = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
humantime-serde = "1.1"
normfs = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }